--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,23 @@
 {
-  "name": ".",
-  "version": "0.0.1",
-  "description": ". initialised with create-express-typescript-application.",
-  "main": "src/index.ts",
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
+    "devStart": "nodemon ./src/App.ts",
+    "start": "node ./build/App.js",
+    "client": "yarn --cwd ../client run start",
     "build": "tsc",
-    "start": "node ./build/src/index.js",
-    "dev": "ts-node ./src/index.ts",
-    "dev:nodemon": "nodemon -w src -e ts,json -x ts-node ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "express",
-    "typescript"
-  ],
-  "devDependencies": {
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.17.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "eslint": "^7.27.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.2"
+    "dev": "concurrently -k \"yarn run devStart\" \"yarn run client\" "
   },
   "dependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
-    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "fs": "^0.0.1-security",
-    "helmet": "^4.6.0",
-    "morgan": "^1.10.0"
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
