--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,16 @@
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/express-fileupload": "^1.1.6",
+    "@types/multer": "^1.4.5",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "pg": "^8.6.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
