--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
