--- a/server/package.json
+++ b/server/package.json
@@ -14,17 +14,23 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/express-fileupload": "^1.1.6",
-    "@types/multer": "^1.4.5",
+    "@types/multer": "^1.4.7",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
+    "eslint-plugin-import": "^2.23.4"
   }
 }
