--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -36,6 +36,21 @@
         "semi": [
             "error",
             "never"
+        ],
+        "space-before-blocks": [
+            "error",
+            "always"
+        ],
+        "comma-spacing": [
+            "error",
+            {
+                "before": false,
+                "after": true
+            }
+        ],
+        "space-before-function-paren": [
+            "error", 
+            "always"
         ]
     }
 }
