--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,23 @@
     "start": "node ./build/App.js",
     "client": "yarn --cwd ../client run start",
     "build": "tsc",
-    "dev": "concurrently -k \"yarn run devStart\" \"yarn run client\" "
+    "dev": "concurrently -k \"yarn run devStart\" \"yarn run client\" ",
+    "tsc": "tsc -w"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/express-fileupload": "^1.1.6",
     "@types/multer": "^1.4.7",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
@@ -28,6 +33,7 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "eslint": "^7.30.0",
