--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
+    "@types/redux-form": "^8.3.2",
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.10",
     "axios": "^0.21.1",
@@ -25,6 +26,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
