--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -51,6 +51,10 @@
         "space-before-function-paren": [
             "error", 
             "always"
+        ],
+        "object-curly-spacing": [
+            "error", 
+            "always"
         ]
     }
 }
