--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -31,6 +31,11 @@
         "semi": [
             "error",
             "never"
+        ],
+        "object-curly-spacing": [
+            "error", 
+            "always"
         ]
+
     }
 }
