--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,6 +21,9 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/ban-ts-ignore": "off",
+        "react/prop-types": 0,
         "indent": [
             "error",
             "tab"
