--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "restaurant-web-app",
+  "name": "real-estate-listing-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/types": "^5.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,7 +17,6 @@
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^8.3.2",
     "@types/redux-thunk": "^2.1.0",
-    "@types/styled-components": "^5.1.10",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,7 +28,6 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
