--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,6 +23,7 @@
     "rules": {
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/ban-ts-ignore": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off",
         "react/prop-types": 0,
         "indent": [
             "error",
