--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -28,6 +28,8 @@
     "rules": {
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/ban-ts-ignore": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["warn"],
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "react/prop-types": 0,
         "indent": [
