--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -41,8 +41,8 @@
             "unix"
         ],
         "quotes": [
-            "error",
-            "double"
+            "off",
+            "single"
         ],
         "semi": [
             "error",
