--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "tsc": "tsc -w",
+    "tsc": "tsc",
     "lint": "eslint .",
     "prepare": "husky install"
   },
@@ -72,5 +72,12 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": [
+      "yarn lint --max-warnings=0",
+      "yarn prettier --write",
+      "yarn test --watchAll=false --findRelatedTests --bail"
+    ]
   }
 }
