--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "lint-staged": "^11.2.3"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
