--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,6 +66,7 @@
         "object-curly-spacing": [
             "error", 
             "always"
-        ]
+        ],
+        "no-console": "warn"
     }
 }
