--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
@@ -72,7 +71,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0",
-    "lint-staged": "^11.2.3"
+    "lint-staged": "^11.2.3",
+    "redux-devtools-extension": "^2.13.9"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
