--- a/package.json
+++ b/package.json
@@ -85,9 +85,12 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "expect": "^27.3.1",
     "husky": "^7.0.0",
     "lint-staged": "^11.2.3",
+    "moxios": "^0.4.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "ts-node": "^10.4.0"
   },
   "lint-staged": {
