--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": ["warn"],
         "@typescript-eslint/explicit-module-boundary-types": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
         "react/prop-types": 0,
         "indent": [
             "error",
