--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.0.0",
     "@mui/styled-engine-sc": "^5.0.0",
     "@mui/styles": "^5.0.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -16,7 +17,6 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^8.3.2",
-    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,7 +26,6 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
-    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -70,12 +69,12 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-flow": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.30.0",
