--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^8.3.2",
+    "@types/styled-components": "^5.1.15",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -64,6 +65,7 @@
     "@cypress/webpack-dev-server": "^1.7.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "cypress": "^9.0.0",
