--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
+        "prettier",
         "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
@@ -18,6 +19,7 @@
     },
     "plugins": [
         "react",
+        "prettier",
         "@typescript-eslint"
     ],
     "settings": {
@@ -26,6 +28,7 @@
         }
     },
     "rules": {
+        "prettier/prettier": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/ban-ts-ignore": "off",
         "no-unused-vars": "off",
@@ -33,36 +36,9 @@
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "react/prop-types": 0,
-        "indent": [
-            "error",
-            2
-        ],
         "linebreak-style": [
             "error",
             "unix"
-        ],
-        "quotes": [
-            "off",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ],
-        "space-before-blocks": [
-            "error",
-            "always"
-        ],
-        "comma-spacing": [
-            "error",
-            {
-                "before": false,
-                "after": true
-            }
-        ],
-        "space-before-function-paren": [
-            "error", 
-            "always"
         ],
         "object-curly-spacing": [
             "error", 
