--- a/package.json
+++ b/package.json
@@ -71,13 +71,16 @@
     "cypress": "^9.0.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "expect": "^27.3.1",
     "husky": "^7.0.0",
     "lint-staged": "^11.2.3",
+    "prettier": "^2.5.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
     "ts-node": "^10.4.0"
