--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "cypress open-ct",
+    "test:e2e": "cypress open",
     "eject": "react-scripts eject",
     "tsc": "tsc",
     "lint": "eslint .",
@@ -72,6 +73,7 @@
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
