--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": ["cypress"],
     "baseUrl": "src",
     "allowJs": false,
     "skipLibCheck": true,
