Design pattern changed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,25 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "types": ["cypress"],
-    "baseUrl": "src",
+    "types": [
+      "cypress"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -25,5 +27,5 @@
   },
   "include": [
     "src"
-  ]
+  ],
 }
