--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,7 @@
         }
     },
     "rules": {
-        "prettier/prettier": "off",
+        "prettier/prettier": 1,
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/ban-ts-ignore": "off",
         "no-unused-vars": "off",
@@ -42,6 +42,7 @@
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "react/prop-types": 0,
+        "semi": 1,
         "linebreak-style": [
             "error",
             "unix"
