--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "docker:build": "docker build -t real-estate-app-image .",
+    "docker:start": "docker run --rm -it --name real-estate-app-container -p 3000:3000 -v $(pwd):/app real-estate-app-image",   
+    "docker:compose": "docker-compose up",
     "test": "cypress open-ct",
     "test:e2e": "cypress open",
     "eject": "react-scripts eject",
