NavBar and logout

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "@mui/styled-engine-sc": "^5.0.0",
-    "@mui/styles": "^5.0.0",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.76",
+    "@mui/material": "5.5.2",
+    "@mui/styled-engine-sc": "5.5.2",
+    "@mui/styles": "^5.5.3",
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18",
+    "react-dom": "18",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -27,7 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "docker:build": "docker build -f Dockerfile.dev -t real-estate-app-image-dev .",
-    "docker:start": "docker run --rm -it --name real-estate-app-container -p 3000:3000 -v $(pwd):/app real-estate-app-image-dev",   
+    "docker:start": "docker run --rm -it --name real-estate-app-container -p 3000:3000 -v $(pwd):/app real-estate-app-image-dev",
     "docker:compose": "docker-compose up",
     "test": "cypress open-ct",
     "test:e2e": "cypress open",
