--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
-FROM node:16.14.0-buster
+FROM node:16.14
 WORKDIR /app
 COPY package.json package.json
-RUN npm install 
+RUN npm install --force
 COPY . .   
 EXPOSE 3000
 CMD [ "npm", "start" ]
