--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.5.1",
@@ -25,8 +26,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
     "docker:build": "docker build -f Dockerfile.dev -t real-estate-app-image-dev .",
     "docker:start": "docker run --rm -it --name real-estate-app-container -p 3000:3000 -v $(pwd):/app real-estate-app-image-dev",
     "docker:compose": "docker-compose up",
@@ -62,8 +63,9 @@
     "@cypress/webpack-dev-server": "^1.7.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/craco__craco": "^6.4.0",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
+    "@types/node": "^17.0.30",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
@@ -87,6 +89,7 @@
     "husky": "^7.0.0",
     "lint-staged": "^11.2.3",
     "prettier": "^2.5.0",
+    "react-error-overlay": "6.0.9",
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
     "ts-node": "^10.4.0"
