--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "esnext"
     ],
     "types": [
-      "cypress"
+      "cypress",
+      "node"
     ],
     "allowJs": false,
     "skipLibCheck": true,
