--- a/package.json
+++ b/package.json
@@ -2,28 +2,6 @@
   "name": "real-estate-listing-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.80",
-    "@mui/material": "5.7.0",
-    "@mui/styled-engine-sc": "5.7.0",
-    "@mui/styles": "^5.7.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "axios": "^0.27.2",
-    "react": "18",
-    "react-dom": "18",
-    "react-redux": "^8.0.1",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-form": "^8.3.8",
-    "styled-components": "^5.3.5",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "test": "jest",
@@ -38,6 +16,70 @@
     "tsc": "tsc",
     "lint": "eslint .",
     "prepare": "husky install"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.80",
+    "@mui/material": "5.7.0",
+    "@mui/styled-engine-sc": "5.7.0",
+    "@mui/styles": "^5.7.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
+    "react": "18",
+    "react-dom": "18",
+    "react-hook-form": "^7.31.3",
+    "react-redux": "^8.0.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-form": "^8.3.8",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-flow": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@cypress/react": "^5.12.4",
+    "@cypress/webpack-dev-server": "^1.8.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.31",
+    "@types/redux-form": "^8.3.5",
+    "@types/redux-mock-store": "^1.0.3",
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "babel-jest": "28.1.0",
+    "cypress": "^9.6.1",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "expect": "^28.0.2",
+    "husky": "^7.0.4",
+    "jest": "^28.1.0",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
+    "react-error-overlay": "6.0.11",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
+    "ts-node": "^10.7.0"
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -61,47 +103,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-flow": "^7.16.7",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@cypress/react": "^5.12.4",
-    "@cypress/webpack-dev-server": "^1.8.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.1.1",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^17.0.31",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux": "^3.6.31",
-    "@types/redux-form": "^8.3.5",
-    "@types/redux-mock-store": "^1.0.3",
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "babel-jest": "^28.1.0",
-    "cypress": "^9.6.1",
-    "eslint": "^8.14.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "expect": "^28.0.2",
-    "husky": "^7.0.4",
-    "jest": "^28.1.0",
-    "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2",
-    "react-error-overlay": "6.0.11",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4",
-    "ts-node": "^10.7.0"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
