--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
+    "typeface-quicksand": "^1.1.13",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -71,6 +72,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "expect": "^28.0.2",
+    "file-loader": "^6.2.0",
     "husky": "^7.0.4",
     "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
