--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/styles": "^5.7.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "framer-motion": "^6.5.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.3",
