--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@formkit/auto-animate": "^1.0.0-beta.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.80",
     "@mui/material": "5.7.0",
@@ -30,7 +29,9 @@
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "react": "18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.1.0",
+    "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.31.3",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
@@ -54,6 +55,7 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.8",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.31",
