--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_API="localhost"
-REACT_APP_IPINFO_TOKEN="8945ef7bd33dd1"
-REACT_APP_IMAGES_URL="http://localhost:8000/api/images"
+VITE_API="localhost"
+VITE_IPINFO_TOKEN="8945ef7bd33dd1"
+VITE_IMAGES_URL="http://localhost:8000/api/images"
