--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
     volumes: 
       - .:/app
     # environment:
-    #   - REACT_APP_VERSION=$npm_package_version
+    #   - VITE_VERSION=$npm_package_version
     env_file: 
       - ./.env.development
