--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "vite",
     "test": "jest",
     "test:watch": "jest -- --watch",
     "test:cy": "cypress open-ct",
     "test:e2e": "cypress open",
-    "build": "react-scripts build",
+    "build": "vite build",
     "docker:build": "docker build -f Dockerfile.dev -t real-estate-app-image-dev .",
     "docker:start": "docker run --rm -it --name real-estate-app-container -p 3000:3000 -v $(pwd):/app real-estate-app-image-dev",
     "docker:compose": "docker-compose up",
-    "eject": "react-scripts eject",
     "tsc": "tsc",
     "lint": "eslint .",
     "prepare": "husky install"
@@ -36,11 +35,11 @@
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typeface-quicksand": "^1.1.13",
     "typescript": "^4.6.4",
+    "vite": "^3.0.8",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -64,6 +63,7 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "@vitejs/plugin-react": "^2.0.1",
     "babel-jest": "28.1.0",
     "cypress": "^9.6.1",
     "eslint": "^8.14.0",
@@ -84,7 +84,10 @@
     "react-error-overlay": "6.0.11",
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "vite-plugin-env-compatible": "^1.1.1",
+    "vite-plugin-svgr": "^2.2.1",
+    "vite-tsconfig-paths": "^3.5.0"
   },
   "jest": {
     "testPathIgnorePatterns": [
