--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,14 @@
       "esnext"
     ],
     "types": [
+      "vite/client", 
+      "vite-plugin-svgr/client",
       "cypress",
       "node"
     ],
     "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
+    "skipLibCheck": false,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
@@ -29,4 +31,5 @@
   "include": [
     "src"
   ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
