--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 FROM node:16.14-buster
 WORKDIR /app
 COPY package.json package.json
-RUN npm install --legacy-peer-deps
+RUN npm install
 COPY . .   
 EXPOSE 3000
 CMD [ "npm", "start" ]
