--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     # environment:
     #   - VITE_VERSION=$npm_package_version
     env_file: 
-      - ./.env.development
+      - ./.env
