--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:watch": "jest -- --watch",
     "test:cy": "cypress open-ct",
     "test:e2e": "cypress open",
-    "build": "tsc && vite build && echo '/* /index.html 200' | cat >build/_redirects ",
+    "build": "tsc && vite build",
     "docker:build": "docker build -f Dockerfile.dev -t real-estate-app-image-dev .",
     "docker:start": "docker run --rm -it --name real-estate-app-container -p 3000:3000 -v $(pwd):/app real-estate-app-image-dev",
     "docker:compose": "docker-compose up",
