post details page

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_API=api
-VITE_IPINFO_TOKEN="8945ef7bd33dd1"
-VITE_IMAGES_URL="/api/images"
-# VITE_API=http://localhost:8000/api
+# VITE_API=api
 # VITE_IPINFO_TOKEN="8945ef7bd33dd1"
-# VITE_IMAGES_URL="http://localhost:8000/api/images"
+# VITE_IMAGES_URL="/api/images"
+VITE_API=http://localhost:8000/api
+VITE_IPINFO_TOKEN="8945ef7bd33dd1"
+VITE_IMAGES_URL="http://localhost:8000/api/images"
