--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "develop", "prod" ]
+    branches: [ "prod" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "develop", "prod" ]
+    branches: [ "prod" ]
   schedule:
     - cron: '20 4 * * 5'
 
