--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-VITE_API="https://realestateapi.rafhaelmarques.me/api"
+VITE_API="https://realestateapp.rafhaelmarques.me/api"
 VITE_IPINFO_TOKEN="8945ef7bd33dd1"
-VITE_IMAGES_URL="https://realestateapi.rafhaelmarques.me/api/images"
-# VITE_API=http://localhost:8000/api
-# VITE_IPINFO_TOKEN="8945ef7bd33dd1"
-# VITE_IMAGES_URL="http://localhost:8000/api/images"
+VITE_IMAGES_URL="https://realestateapp.rafhaelmarques.me/api/images"
